--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -42,3 +42,9 @@ body {
 .list-group-item {
     background-color: transparent;
 }
+
+.ct34 h3 {
+	background-color: #e9ecef;
+	padding: 1rem;
+	border-radius: 3px;
+}
