--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -42,3 +42,21 @@ body {
 .list-group-item {
     background-color: transparent;
 }
+
+.group1, .group2, .group3 {
+	border: 1px solid rgba(0, 0, 0, .125);
+}
+
+.group1 h4, .group2 h4, .group3 h4 {
+	padding: 15px;
+}
+
+.footer {
+	margin-top: 2rem;
+	margin-bottom: 5rem;
+}
+
+.footer p {
+	font-size: 19px;
+	font-weight: 600;
+}
